# webcad

./: .gitignore  build_occt.sh  build_wasm.sh
.claude/: settings.json  settings.local.json
bindings/: CMakeLists.txt  bindings.cpp  geometry_module.js  geometry_module.wasm
core/: geometry.cpp  geometry.h  occ_geometry.cpp  occ_geometry.h  occ_geometry_mesh.cpp  occ_geometry_mesh.h
demo/: index.html  mesh_text.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
demo/public/: geometry_module.js  geometry_module.wasm
demo/src/: main.ts  mesh_text.ts
docs/: project-roadmap.md  roadmap.md  technical-reference.md
web-sdk/: package.json
web-sdk/src/: index.ts
